<resources>
    <string name="app_name">DecorAR</string>
    <string name="title_catalog">Catálogo</string>
    <string name="title_camera">Cámara</string>
    <string name="camera_permission_toast">Camera permission is needed to run this application</string>
    <string name="searching_for_surfaces">Searching for surfaces…</string>
    <string name="ar_device_support">This device does not support AR</string>
    <string name="paredes">Paredes</string>
    <string name="pisos">Pisos</string>
    <string name="muebles">Muebles y Decoración</string>
    <string name="control_name">Mueble</string>
    <string name="content_description_media">Title</string>
    <string name="descripcion">Descripcion</string>
    <string name="tiitulo">Tiitulo</string>
    <string name="precio">Precio</string>
    <string name="material">Material</string>
    <string name="marca">Marca</string>
    <string name="donde_comprar">Donde Comprar</string>
    <string name="colocar">Colocar</string>
    <string-array name="types">
        <item>Muebles y Decoración</item>
        <item>Paredes</item>
        <item>Pisos</item>
    </string-array>
</resources>