<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="70dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/furniture_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/content_description_media" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/furniture_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiitulo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/furniture_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/descripcion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/furniture_price"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/precio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/furniture_material"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/material"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/furniture_brand"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marca"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/colocar"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/colocar"
                    app:icon="@android:drawable/ic_menu_edit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/donde_comprar"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donde_comprar"
                    app:icon="@android:drawable/ic_menu_info_details" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</ScrollView>


